JPress v5.0.1 2022-08-28:
优化：增强 #pages() 指令，可以通过更多的参数获取内容
优化：升级 JQuery BsFormBuilder 等到最新版本
修复：在 JPress 进行安装的时候，可能有 NPE 的问题
修复：后台表单功能无法删除的问题
修复：重置密码和邮箱激活可能有 NPE 的问题
修复：后台图片批量删除无用的问题



JPress v5.0.0 2022-08-18:
1、移除 会员、订单、优惠券、购物车 等 "商城" 行为模块
2、移除用户中心的投稿、搜藏功能
3、新增招聘模块
4、新增表单模块
5、新增多站点模块
6、新增模板拖拽功能
7、新增附件分类
8、新增视频附件
9、新增更多支持运营的字段
10、还有很多细节....
