@@ -1,3 +1,15 @@
+JPress v5.0.2 2022-09-02:
+修复：部署在 tomcat 二级目录下，无法正常注册和取回密码的问题
+修复：后台页面的链接内容和前台的访问实际路径不一致的问题
+修复：子站点的发布评论路径不正确的问题
+修复：编辑器在源码状态下鼠标不能滚动的问题
+复发：送短信、微信、邮箱时设置用户标签无效的问题
+优化：添加对站点 自定义id 不能为空判断
+优化：视频列表删除底部无用的 "批量删除" 操作
+优化：更新 Jboot 和 Jsoup 到最新版本
+
+
+
 JPress v5.0.1 2022-08-28:
 优化：增强 #pages() 指令，可以通过更多的参数获取内容
 优化：升级 JQuery BsFormBuilder 等到最新版本
